--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
+<title>RIFKIWEB - Selamat datang</title>
 
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>RIFKIWEB - Selamat datang</title>
+<meta content="index, follow" name="robots"/>
+<meta content="1 days" name="revisit-after"/>
 <meta content="muhamad rifki sumarna" name="author"/>
 <meta content="Selamat datang di website saya" name="description"/>
 <meta content="muhamad rifki sumarna, rifkiweb" name="keywords"/>
