--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link href="assets/css/style.css" rel="stylesheet"/>
 
 <script data-goatcounter="https://monitor.rifkiweb.my.id/count" async src="//gc.zgo.at/count.js"></script>
-<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6349124961267919" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -132,12 +132,6 @@
                       </div>
                   </div>
 
-                  <div class="fcf-form-group">
-                    <div class="fcf-input-group">
-                      <div class="cf-turnstile" data-sitekey="0x4AAAAAAAQfS85LckgpTl51" data-theme="light"></div>
-                    </div>
-                </div>
-          
                   <div class="fcf-form-group">
                       <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Kirim pesan</button>
                   </div>
