--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 
 <script data-goatcounter="https://monitor.rifkiweb.my.id/count" async src="//gc.zgo.at/count.js"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6349124961267919" crossorigin="anonymous"></script>
-
 </head>
 <body>
-
+<div id="loader" class="center"></div>
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
   <header id="header">
     <div class="d-flex flex-column">
@@ -56,7 +55,6 @@
   </section>
 
   <main id="main">
-
     <section id="about" class="about">
       <div class="container">
         <div class="section-title">
@@ -143,7 +141,6 @@
       </div>
     </div>
     </section>
-
   </main>
 
   <footer id="footer">
@@ -164,5 +161,20 @@
 <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 <script src="assets/js/main.js"></script>
 
+<script>
+  document.onreadystatechange = function () {
+      if (document.readyState !== "complete") {
+          document.querySelector(
+              "body").style.visibility = "hidden";
+          document.querySelector(
+              "#loader").style.visibility = "visible";
+      } else {
+          document.querySelector(
+              "#loader").style.display = "none";
+          document.querySelector(
+              "body").style.visibility = "visible";
+      }
+  };
+</script>
 </body>
 </html>
