--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6349124961267919" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div id='loading_screen'>
+    <img class='uk-position-center' src='https://arsip.rifkiweb.my.id/r.gif' style='width:100%;'/>
+  </div>
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
   <header id="header">
     <div class="d-flex flex-column">
