--- a/index.html
+++ b/index.html
@@ -163,5 +163,26 @@
 <script src="assets/vendor/typed.js/typed.umd.js"></script>
 <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 <script src="assets/js/main.js"></script>
+<script>
+(function() {
+  if (window.addEventListener) {
+    window.addEventListener("load", nascondi_loading_screen, false);
+  } else {
+    window.attachEvent("onload", nascondi_loading_screen);
+  }
+})();
+
+function mostra_loading_screen() {
+  document.getElementById("loading_screen").style.display = 'block';
+}
+
+function nascondi_loading_screen() {
+  setTimeout(function() {
+    document.getElementById("loading_screen").style.display = 'none';
+  }, 3000);
+}
+
+mostra_loading_screen();
+</script>
 </body>
 </html>
