--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head>
 <title>RIFKIWEB - Selamat datang</title>
-
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta content="index, follow" name="robots"/>
@@ -10,8 +9,8 @@
 <meta content="Selamat datang di website saya" name="description"/>
 <meta content="muhamad rifki sumarna, rifkiweb" name="keywords"/>
 
-<link href="assets/img/favicon.ico" rel="icon"/>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"/>
+<link href="assets/img/favicon.ico" rel="icon"/>
 <link href="assets/vendor/aos/aos.css" rel="stylesheet"/>
 <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
@@ -67,7 +66,7 @@
             <p align="justify">
               Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.
             </p>
-            <p align="justify">Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.
+            <p align="justify">Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Hobi saya mendengarkan musik, genre musik yang saya suka yakni dangdut. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.
             </p>
             <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>Blog saya</strong></a>
           </div>
