--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<script src="https://alwingulla.com/88/tag.min.js" data-zone="44313" async data-cfasync="false"></script>
 <title>RIFKIWEB - Selamat datang</title>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
