--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WCLKSPLGKE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WCLKSPLGKE');
+</script>
 <script src="https://alwingulla.com/88/tag.min.js" data-zone="44313" async data-cfasync="false"></script>
 <script data-goatcounter="https://monitor.rifkiweb.my.id/count" async src="//gc.zgo.at/count.js"></script>
 
