--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1 align="center">Muhamad Rifki Sumarna</h1>
-      <p align="center"><span class="typed" data-typed-items="Selamat datang di website saya, website sederhana modal template"></span></p>
+      <h1 align="center">M Rifki Sumarna</h1>
+      <p align="center"><span class="typed" data-typed-items="Selamat datang 😊, Sebuah website sederhana"></span></p>
     </div>
   </section>
 
