--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br/>
       <div class="profile">
         <div class="social-links mt-3 text-center">
-          <a href="https://facebook.com/ikiiii.rifki" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://id.linkedin.com/in/muhamad-rifki-sumarna-19335a255" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://instagram.com/_.ikiiii" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/ikiitech" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://youtube.com/@muhammadrifkiez" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
