--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             </p>
             <p align="justify">Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Hobi saya mendengarkan musik, genre musik yang saya suka yakni dangdut dan saya juga suka dengan lagu DJ. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.
             </p>
-            <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>Blog saya</strong></a>
+            <a href="https://rifkisbg05.blogspot.com" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>Blog saya</strong></a>
+            <a href="https://ikiitech.github.io/ikiitech/CV_muhamad_rifki_sumarna.pdf" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>CV saya</strong></a>
           </div>
         </div>
       </div>
