--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
   gtag('config', 'G-WCLKSPLGKE');
 </script>
-<script data-goatcounter="https://monitor.rifkiweb.my.id/count" async src="//gc.zgo.at/count.js"></script>
 
-<title>RIFKIWEB - Selamat datang</title>
+<title>MUHAMAD RIFKI SUMARNA</title>
 
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -19,7 +18,7 @@
 <meta content="1 days" name="revisit-after"/>
 <meta content="muhamad rifki sumarna" name="author"/>
 <meta content="Selamat datang di website saya" name="description"/>
-<meta content="muhamad rifki sumarna, rifkiweb" name="keywords"/>
+<meta content="muhamad rifki sumarna, rifki sumarna" name="keywords"/>
 
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"/>
 <link href="assets/img/favicon.ico" rel="icon"/>
@@ -95,13 +94,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Alamat:</h4>
-                <p>Jl. Palasari Kidul, Desa Tanjungwangi, Kecamatan Cijambe, Kabupaten Subang, Jawa Barat, Indonesia</p>
+                <p>Dusun Palasari, Desa Tanjungwangi, Kecamatan Cijambe, Kabupaten Subang, Jawa Barat, Indonesia</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>sapa@rifkiweb.my.id</p>
+                <p>mail@rifkiweb.my.id</p>
               </div>
 
               <div class="phone">
@@ -154,7 +153,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        Oleh <strong><span>Muhamad Rifki Sumarna</span></strong>
+        © <strong><span>2024</span></strong>
       </div>
     </div>
   </footer>
