--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <br/>
       <div class="profile">
         <div class="social-links mt-3 text-center">
-          <a href="https://id.linkedin.com/in/muhamad-rifki-sumarna-19335a255" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://id.linkedin.com/in/rifkisumarna05" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://instagram.com/_.ikiiii" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/ikiitech" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://youtube.com/@muhammadrifkiez" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
@@ -153,7 +153,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        © <strong><span>2024</span></strong>
+        © <strong><span>2024 Muhamad Rifki Sumarna</span></strong>
       </div>
     </div>
   </footer>
