--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://id.linkedin.com/in/rifkisumarna05" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://instagram.com/_.ikiiii" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/ikiitech" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://youtube.com/@muhammadrifkiez" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+          <a href="https://www.youtube.com/@muhammadrifkiez?sub_confirmation=1" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1 align="center">M Rifki Sumarna</h1>
-      <p align="center"><span class="typed" data-typed-items="Selamat datang 😊, Sebuah website sederhana"></span></p>
+      <p align="center"><span class="typed" data-typed-items="Halo selamat datang, Sebuah website sederhana"></span></p>
     </div>
   </section>
 
@@ -72,9 +72,9 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <p align="justify">
-              Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.
+              Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Saya lulusan SMK jurusan Teknik Komputer dan Jaringan.
             </p>
-            <p align="justify">Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Hobi saya mendengarkan musik, genre musik yang saya suka yakni dangdut dan saya juga suka dengan lagu DJ. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.
+            <p align="justify">Anak pertama dari dua bersaudara. Hobi saya mendengarkan musik, genre musik yang saya suka yakni dangdut dan saya juga suka dengan lagu DJ.
             </p>
             <a href="https://rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>Blog saya</strong></a>
             <a href="https://www.canva.com/design/DAGF1rRn_Cc/LFq3Ip8okRd3_3CsklPGbQ/edit" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>CV saya</strong></a>
