--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p align="justify">Anak pertama dari dua bersaudara. Hobi saya mendengarkan musik, genre musik yang saya suka yakni dangdut dan saya juga suka dengan lagu DJ.
             </p>
             <a href="https://rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>Blog saya</strong></a>
-            <a href="https://www.canva.com/design/DAGF1rRn_Cc/LFq3Ip8okRd3_3CsklPGbQ/edit" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>CV saya</strong></a>
+            <a href="https://github.com/ikiitech/ikiitech/blob/main/CV%20MUHAMAD%20RIFKI%20SUMARNA.pdf" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>CV saya</strong></a>
           </div>
         </div>
       </div>
