--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </header>
 
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+    <div class="hero-container" data-aos="zoom-out">
       <h1 align="center">M Rifki Sumarna</h1>
       <p align="center"><span class="typed" data-typed-items="Halo selamat datang, Sebuah website sederhana"></span></p>
     </div>
@@ -88,7 +88,7 @@
         <div class="section-title">
           <h2>Info kontak</h2>
         </div>
-        <div class="row" data-aos="fade-in">
+        <div class="row" data-aos="zoom-in">
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
