--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>mail@rifkiweb.my.id</p>
+                <p>admin@rifkiweb.my.id</p>
               </div>
 
               <div class="phone">
