--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
     <div class="container">
       <div class="social-links">
         <a href="https://www.facebook.com/ikiiii.rifki" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/_.ikiiii" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/rifkisumarna05" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://linkedin.com/in/rifkisumarna05" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ikiitech" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.youtube.com/@muhammadrifkiez" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.youtube.com/@muhammadrifkiez?sub_confirmation=1" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
       </div>
       <div class="copyright">
         © <strong><span>2024 Muhamad Rifki Sumarna</span></strong>
