--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
   animation-iteration-count: 1;
 }
 </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WCLKSPLGKE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-WCLKSPLGKE');
+</script>
 </head>
 <body>
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
@@ -125,7 +133,6 @@
   </section>
 
   <main id="main">
-
     <section id="about" class="about">
       <div class="container" data-aos="slide-right">
 
@@ -197,12 +204,10 @@
                   </div>
                   <div class="text-center"><button type="submit">Kirim pesan</button></div>
                 </form>
-    
               </div>
            </div>
         </div>
     </section>
-
   </main>
 
   <footer id="footer">
@@ -220,8 +225,7 @@
     </div>
   </footer>
 
-  <div id="preloader"></div>
-
+<div id="preloader"></div>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
