--- a/index.html
+++ b/index.html
@@ -114,6 +114,25 @@
 </script>
 </head>
 <body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCW1U7M15HP5Fhd_1u9PxOrdTO6OtNNlk0",
+      authDomain: "rifki-web.firebaseapp.com",
+      projectId: "rifki-web",
+      storageBucket: "rifki-web.appspot.com",
+      messagingSenderId: "75339411622",
+      appId: "1:75339411622:web:93ac9840746d8a5e28c467"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
   <header id="header" class="d-flex flex-column justify-content-center">
     <nav id="navbar" class="navbar nav-menu">
