--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <p align="justify">Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Saya lulusan SMK jurusan Teknik Komputer dan Jaringan.</p>
             <p align="justify">Anak pertama dari dua bersaudara. Hobi saya mendengarkan musik, genre musik yang saya suka yakni dangdut dan saya juga suka dengan lagu DJ.</p>
             <p align="center"><a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>Blog saya</strong></a>
-            <a href="https://github.com/ikiitech/arsip/blob/main/dokumen/CV%20MUHAMAD%20RIFKI%20SUMARNA.pdf" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>CV saya</strong></a></p>
+            <a href="../cv" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>CV saya</strong></a></p>
           </div>
         </div>
       </div>
